--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         />
         <div class="features__feature">
           <div class="features__icon">
-            <img src="/img/interface.gif" alt="" />
+            <img src="img/interface.gif" alt="" />
           </div>
           <h5 class="features__header">100% digital bank</h5>
           <p>
@@ -90,7 +90,7 @@
 
         <div class="features__feature">
           <div class="features__icon">
-            <img src="/img/growth.gif" alt="" />
+            <img src="img/growth.gif" alt="" />
           </div>
           <h5 class="features__header">Watch your money grow</h5>
           <p>
@@ -114,7 +114,7 @@
         />
         <div class="features__feature">
           <div class="features__icon">
-            <img src="/img/credit-card.gif" alt="" />
+            <img src="img/credit-card.gif" alt="" />
           </div>
           <h5 class="features__header">Free debit card included</h5>
           <p>
